plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id "io.freefair.lombok" version "8.4"
}

group = 'com.mztrade'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1' // SQL 데코레이터 외부라이브러리 추가 2024.01.25
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // 로그인 및 회원가입을 위해 추가 2024.01.23
    implementation 'org.springframework.boot:spring-boot-starter-security' // 로그인 및 회원가입을 위해 추가 2024.01.23
    implementation 'org.springframework.boot:spring-boot-starter-validation' // 로그인 및 회원가입을 위해 추가 2024.01.23
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // 로그인 및 회원가입을 위해 추가 2024.01.23
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // 로그인 및 회원가입을 위해 추가 2024.01.23
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // 로그인 및 회원가입을 위해 추가 2024.01.2

    // redis 추가 2024.01.25
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'


    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
